--- a/Portfolio/assets/stylesheets/mainfolio.css
+++ b/Portfolio/assets/stylesheets/mainfolio.css
@@ -365,27 +365,50 @@ textarea {
     color: #000;
     padding: 0.2em 0;
 }
-*/
+
 /*mobile first*/
 
-body{
-        width: 100%;
-        background-image:  black;
+body{ 
+        width: 100%;/*
+        background-image: url(../images/me_chalkin_code2.jpeg);
+        background-repeat: no-repeat;
+       */
+
     }
 
 .mobile-container{
+    position: relative;
     /*max-width: 480px;*/
-    margin: auto;
-    background-color: #FFFFFF;
+    margin: auto;/*
+    background-color: #FFFFFF;*/
     height:100vh;
-    color:white;
+    /*color:white;*/
     border-radius: 10px;
+}
+
+.mobile-container:before{
+    content: '';
+    display: block;
+    position:absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    opacity: 0.3;
+    background-image:url(../images/me_chalkin_code2.jpeg);
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-size: cover;
 
 }
+
+
 .topnav{
     overflow: hidden;
-    background-color: #23DCBD;
+    background-color: rgba(35, 220, 189,.4);
     position: relative;
+    z-index:1;
 }
 
 .topnav #myLinks {
@@ -413,22 +436,40 @@ body{
 }
 
 .active{
-    background-color: #23DCBD;
+    background-color: #91f7e6 /*23DCBD*/;
     color:white;
 }
 
+
 .header .fa{
-    font-size: 30px;
+    font-size: 50px;
     width: 50px;
     font-family: FontAwesome;
     text-align: center;
+    text-decoration: none;
+    color: grey/*#fed8dc*/;
+    display: flex;
+    margin: 15px auto 0px;
+
+}
+
+.header .fa:link{
+
+}
+.header .fa:visited{
+
+}
+.header .fa:hover{
+
+}
+.header .fa:active{
 
 }
 
 .header > h1{
   font-family: muli;
   font-size: 2.2em;
-  color:black;
+  color:grey;
   text-align: center;
   padding: 20px 0px;
   font-weight: bold;
@@ -437,13 +478,14 @@ body{
 
   font-family: muli;
   font-size: 1.0em;
-  color:black;
+  color:grey;
   text-align: center;
   font-weight: bold;
 }
  img{
     padding-top: 200px;
     width: 100%;
+    opacity: .2;
  }
 
 
@@ -451,10 +493,10 @@ body{
 @media only screen and (min-width: 768px){
 
     body{
-        background-color: black;
+        /*background-color: black;*/
     }
     img{
-        display: none;
+        /*display: none;*/
     }
 
 }
