--- a/Portfolio/assets/stylesheets/mainfolio.css
+++ b/Portfolio/assets/stylesheets/mainfolio.css
@@ -395,7 +395,7 @@ body{
     width: 100%;
     height: 100%;
     z-index: 0;
-    opacity: 0.3;
+    opacity: 0.35;
     background-image:url(../images/me_chalkin_code2.jpeg);
     background-repeat: no-repeat;
     background-position: 50% 0;
@@ -467,6 +467,7 @@ body{
 }
 
 .header > h1{
+  margin-top: 200px;
   font-family: muli;
   font-size: 2.2em;
   color:grey;
