--- a/Portfolio/assets/stylesheets/mainfolio.css
+++ b/Portfolio/assets/stylesheets/mainfolio.css
@@ -65,7 +65,7 @@
 
 
 
-/*mobile first*/
+/*mobile first, up to 768px */
 html, body{
     margin:0;
     padding:0;
@@ -75,8 +75,28 @@ html, body{
 body{ 
         width: 100%;
         height: 100vh;
-      
+        /*background-image: url(../images/me_chalkin_code2.jpeg);
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+        background-size: cover;
+         background-color: rgba(255, 255, 255, 0.2);*/
 }
+
+.mobile-background {
+  position: fixed;
+  z-index: -1;   
+  width: 100%;
+  height: 100%;
+  background-image: url(../images/me_chalkin_code2.jpeg);
+  background-size: cover;
+  opacity: 0.3;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+
 
 
 
@@ -95,20 +115,35 @@ body{
 
 .overlay-content{
     position: relative;
-    top: 25%;
+    top: 30%;
     width: 100%;
     text-align: center;
-    margin-top: 30px;
+    /*margin-top: 10%;*/
 }
-.overlay a, .openbtn{
-    padding: 8px;
+.overlay a {
+    padding: 2.5%;
     text-decoration: none;
-    font-size: 36px;
+    font-size: 2.5em;
     color: #818181;
     display: block;
-    transition: 0.3s;
+    transition: .7s;
 
 }
+
+.openbtn{
+    padding: 2%;
+    text-decoration: none;
+    font-size: 2.5em;
+    color: #818181;
+    display: block;
+    text-align: right;
+    animation: myMove 5s infinite;
+}
+    @keyframes mymove{
+        50% {font-size: 4em;}
+    }
+
+
 
 .overlay a:hover, .overlay a:focus{
     color: #f1f1f1;
@@ -116,20 +151,21 @@ body{
 
 .overlay .closebtn {
     position: absolute;
-    top: 20px;
-    right: 45px;
-    font-size: 60px;
+    top: 1%;
+    right: 2%;
+    font-size: 5em;
 }
 
-.header .fa{
-    font-size: 50px;
-    width: 50px;
+div > .fa{
+    font-size: 3em;
+    width: 0%;
     font-family: FontAwesome;
     text-align: center;
     text-decoration: none;
     color: grey/*#fed8dc*/;
     display: flex;
-    margin: 15px auto 0px;
+    justify-content: center;
+    margin: 5% auto 0px;
 
 }
 
@@ -146,23 +182,26 @@ body{
 
 }
 
+
 .header > h1{
-  margin-top: 200px;
+  margin: 12% 5% 2%;
   font-family: muli;
-  font-size: 2.2em;
+  font-size: 2.5em;
   color:grey;
   text-align: center;
-  padding: 20px 0px;
+  padding: 5% 0%;
   font-weight: bold;
 }
 .header > p{
-
+  margin: 0% 0% 10%;
   font-family: muli;
   font-size: 1.0em;
   color:grey;
   text-align: center;
   font-weight: bold;
 }
+
+
  img{
     display: block;
     width: 100%;
