--- a/Portfolio/assets/stylesheets/mainfolio.css
+++ b/Portfolio/assets/stylesheets/mainfolio.css
@@ -108,7 +108,7 @@ body{
     top:0;
     left:0;
     background-color:  rgb(0,0,0);
-    background-color:  rgba(0,0,0,0.95);
+    background-color:  rgba(0,0,0,0.93);
     overflow-x:hidden;
     transition: 0.5s;
 }
@@ -139,8 +139,8 @@ body{
     text-align: right;
     animation: myMove 5s infinite;
 }
-    @keyframes mymove{
-        50% {font-size: 4em;}
+    @keyframes myMove{
+        50% {color: white;}
     }
 
 
@@ -157,7 +157,7 @@ body{
 }
 
 div > .fa{
-    font-size: 3em;
+    font-size: 2.5em;
     width: 0%;
     font-family: FontAwesome;
     text-align: center;
@@ -192,13 +192,23 @@ div > .fa{
   padding: 5% 0%;
   font-weight: bold;
 }
-.header > p{
+.header > p {
   margin: 0% 0% 10%;
   font-family: muli;
   font-size: 1.0em;
   color:grey;
   text-align: center;
   font-weight: bold;
+}
+
+ul{
+   list-style-position:  inside; 
+   font-family: muli;
+   font-size: 1em;
+   color: grey;
+   text-align:left;
+   font-weight: bold;
+   margin-bottom:25%;
 }
 
 
