--- a/Portfolio/assets/stylesheets/mainfolio.css
+++ b/Portfolio/assets/stylesheets/mainfolio.css
@@ -98,7 +98,7 @@ body{
   height: 100%;
   background-image: url(../images/me_chalkin_code2.jpeg);
   background-size: cover;
-  opacity: 0.3;
+  opacity: 0.4;
   top: 0;
   left: 0;
   bottom: 0;
@@ -117,7 +117,7 @@ body{
     top:0;
     left:0;
     background-color:  rgb(0,0,0);
-    background-color:  rgba(0,0,0,0.93);
+    background-color:  rgba(255,155,155,0.99);
     overflow-x:hidden;
     transition: 0.5s;
 }
@@ -158,7 +158,9 @@ body{
   display: none;
 }
 
-
+#main{
+  margin-top: 0em;
+}
 
 
 .overlay a:hover, .overlay a:focus{
@@ -172,15 +174,19 @@ body{
     font-size: 5em;
 }
 
+.fa-container{
+  display:flex;
+  margin-top:4em;
+}
+
 div > .fa{
-    font-size: 2.5em;
-    width: 0%;
+    font-size: 3.5em;
+    
     font-family: FontAwesome;
     text-align: center;
     text-decoration: none;
-    color:  #F4E9CD/*#7fcdff#fed8dc*/;
-    display: flex;
-    justify-content: center;
+    color:#527771  /*#F4E9CD #7fcdff#fed8dc*/;
+    flex-direction: row;
     margin: 5% auto 0px;
 
 }
@@ -200,19 +206,30 @@ div > .fa{
 
 
 .header > h1{
-  margin: 45% 5% 0%;
+  margin: 35% 5% 0%;
   font-family: muli;
-  font-size: 2.5em;
-  color:#064273;
+  font-size: 3.5em;
+  color: #468189/*,#064273*/;
   text-align: center;
   padding: 0% 0%;
   font-weight: bold;
 }
+.header > h2{
+  margin: 10% 5% 0%;
+  font-family: muli;
+  font-size: 2em;
+  color:black;/* #468189/*,#064273*/
+  text-align: center;
+  padding: 0% 0%;
+  font-weight: bold;
+
+}
+
 .header > p {
   margin: 0% 5% 15%;
   font-family: muli;
   font-size: 1.4em;
-  color:#064273;
+  color:black/*#064273*/;
   text-align: center;
   font-weight: bold;
 }
@@ -222,21 +239,22 @@ ul{
    list-style-type:none;
    font-family: muli;
    font-size: 1.2em;
-   color: #468189/*#064273*/;
+   color:black /*#468189/*#064273*/;
    text-align:center;
-   font-weight: bold;
+   font-weight: none;
    margin-bottom:35%;
    display:inline;
 }
 
 ul a {
   text-decoration: none;
-  color:#468189;
+  color:black/*#f4e9cd #031926 #468189*/;
 }
 ul a:hover{
   text-decoration: underline;
   color:white;
 }
+
 
  div.thumb{
    width: 60%;
@@ -244,14 +262,16 @@ ul a:hover{
    /*box-shadow: 3px 3px 5px 6px #bbb;*/
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); 
    margin: 25% auto 5%;
+   border-radius: 8px;
  }
 
  div.info-container{
     text-align: center;
-    padding:5% ;
+    padding:5%;
     margin: 0% auto 0%;
     vertical-align: center;
     font-family: muli;
+    border-radius: 8px;
  }
 
  img{
@@ -260,6 +280,7 @@ ul a:hover{
     opacity: .9;
     height: 100%;
     margin: 0% auto 0;
+    border-radius: 8px 8px 0px 0px;
  }
 
 div > .topIcon{
@@ -333,7 +354,7 @@ button:active{
 
 .button {
   position: relative;
-  background: #064273;
+  background: #031926;
   /*bottom:2%;
   right:2%;*/
   margin: 0% auto;
@@ -352,18 +373,18 @@ button:active{
   height : 100px;
   margin-top: -100px;
   padding-top: 2px;
-  background : #26A69A;
+  background : #F4E9CD/*#26A69A*/;
   left : -250px;
   transition : .3s;
 }
 .btnText {
-  color : white;
+  color : #F4E9CD;
   transition : .3s;
 }
 .btnText2 {
   margin-top : 63px;
   margin-right : -130px;
-  color : #FFF;
+  color : #031926;
 }
 .button:hover .btnTwo{ /*When hovering over .button change .btnTwo*/
   left: -130px;
@@ -386,6 +407,7 @@ button:active{
 @media only screen and (min-width: 768px){
 
     body{
+      height: 100vh;
       /*  background: linear-gradient(90deg,#C3E2F7, #D1E9E4, #F8E6E9);*/
 }
 
@@ -407,13 +429,11 @@ button:active{
   right: 0;
 }
 
-
-
 .header > h1{
-  margin: 5% 0% 0%;
+  margin: 200px 5% 0%;
   font-family: muli;
-  font-size: 2.5em;
-  color:#031926,#064273;
+  font-size: 4em;
+  color:#f4e9cd/*,#031926,#064273*/;
   text-align: center;
   padding: 0% 0%;
   font-weight: bold;
@@ -432,11 +452,16 @@ ul{
    list-style-type:none;
    font-family: muli;
    font-size: 1.2em;
-   color: #468189/* #064273*/;
+   color: #F4E9CD/*#468189/* #064273*/;
    text-align:center;
-   font-weight: bold;
+   font-weight: none;
    margin-bottom:35%;
    display:inline;
+}
+
+ul a {
+  text-decoration: none;
+  color:#f4e9cd/*#031926 #468189*/;
 }
 
 /*ul{
@@ -532,24 +557,29 @@ ul{
 #main{
   /*margin:0px;*/
   transition: margin-left .5s;
-  padding: 16px;
-  /*height:100vh;*/
+  padding:0px;
+  height:100vh;
+}
+
+.fa-container{
+  display:flex;
+  margin-top:5%;
 }
 
 
 div > .fa{
-    font-size: 5.5em;
-    width: 0%;
+    font-size: 5.5em;\
     font-family: FontAwesome;
     text-align: center;
     text-decoration: none;
-    color:  
-#F4E9CD/*#7fcdff/*#fed8dc*/;
-    display: flex;
+    color:  #F4E9CD/*#7fcdff/*#fed8dc*/;
     justify-content: center;
     margin: 2% auto 0px;
 
 }
+
+
+
 
 p{
   color:#468189;
