--- a/Portfolio/assets/stylesheets/mainfolio.css
+++ b/Portfolio/assets/stylesheets/mainfolio.css
@@ -87,7 +87,9 @@ body{
 }
 /*reset*/
 
-
+ nav{
+  display:none;
+}
 
 
 
@@ -98,7 +100,7 @@ body{
   height: 100%;
   background-image: url(../images/me_chalkin_code2.jpeg);
   background-size: cover;
-  opacity: 0.4;
+  opacity: 0.8;
   top: 0;
   left: 0;
   bottom: 0;
@@ -117,7 +119,8 @@ body{
     top:0;
     left:0;
     background-color:  rgb(0,0,0);
-    background-color:  rgba(127,205,255,0.99);
+    background-color:  hsla(203, 92%, 65%, 0.8);
+    background-color: rgba(0,0,0,.8);
     overflow-x:hidden;
     transition: 0.5s;
 }
@@ -127,13 +130,14 @@ body{
     top: 30%;
     width: 100%;
     text-align: center;
+    font-family:'Quicksand';
     /*margin-top: 10%;*/
 }
 .overlay a {
     padding: 2.5%;
     text-decoration: none;
     font-size: 2.5em;
-    color: #818181;
+    color: black,#818181;
     display: block;
     transition: .7s;
 
@@ -175,21 +179,48 @@ body{
 }
 
 .fa-container{
-  display:flex;
-  margin-top:4em;
+  display:flex; 
+  height:100vh;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgba(34,255,255,.4);
+
+
+}
+.faDescribe{
+  margin: 0%;
+  font-family: muli;
+  font-size: 1.9em;
+  color:black/*#064273*/;
+  text-align: left;
+  width:100%;
+  margin-left:0% !important;
+
 }
 
+.fa-item{
+  flex-basis: 9em;
+  margin-left:40%;
+}
+
+
+
+
+
+
 div > .fa{
-    font-size: 3.5em;
+    font-size: 4.5em;
     
     font-family: FontAwesome;
     text-align: center;
     text-decoration: none;
-    color:#188d9d/*#527771  /*#F4E9CD #7fcdff#fed8dc*/;
+    color:black/*#527771  /*#F4E9CD #7fcdff#fed8dc*/;
     flex-direction: row;
     margin: 5% auto 0px;
 
 }
+
+
 
 .header .fa:link{
 
@@ -204,8 +235,26 @@ div > .fa{
 
 }
 
+h1{
+  display:none;
+}
 
-.header > h1{
+.mobileOnly{
+  display: block;
+    margin: 0% 5% 0% 0%;
+  font-family:'Permanent Marker','Berkshire Swash',muli;
+  font-size: 2.em;
+  color:black/* #188d9d*/ /*, #468189/*,#064273*/;
+  text-align: center;
+  padding: 7% 0% 0% 10%;
+  font-weight: normal;
+  width:0px;
+}
+
+
+
+.desktopOnly{
+  display:none !important;
   margin: 35% 5% 0%;
   font-family:'Permanent Marker','Berkshire Swash',muli;
   font-size: 3.5em;
@@ -214,10 +263,11 @@ div > .fa{
   padding: 0% 0%;
   font-weight: normal;
 }
+
 .header > h2{
   margin: 10% 5% 0%;
-  font-family: muli;
-  font-size: 2em;
+  font-family: 'muli';
+  font-size: 1.5em;
   color:black;/* #468189/*,#064273*/
   text-align: center;
   padding: 0% 0%;
@@ -226,13 +276,25 @@ div > .fa{
 }
 
 .header > p {
-  margin: 0% 5% 15%;
-  font-family: muli;
-  font-size: 1.4em;
+  margin: 0% 0% 0% 2%;
+  font-family: 'Quicksand';
+  font-size: 1.5em;
   color:black/*#064273*/;
   text-align: center;
   font-weight: bold;
+  position:absolute;
+  top:0%;
 }
+
+.header{
+  display:flex;
+  flex-direction: column;
+  background-color: rgba(34,255,255,.4);
+  height:100vh;
+  justify-content: space-between;
+  width:100%;
+}
+
 
 ul{
    list-style-position:  inside; 
@@ -273,7 +335,7 @@ ul a:hover{
     font-family: 'Berkshire Swash';
     border-radius: 10px;
     font-weight: bold;
-    font-size: 2em;
+    font-size: 1.2em;
     color: black;
  }
 
@@ -403,6 +465,84 @@ button:active{
   color:black;
 }*/
 
+#resume{
+  width:60%;
+  margin-top: 5%;
+}
+
+
+.about-container{
+  display:flex;
+  flex-direction: row;
+  flex-wrap:nowrap;
+  text-align: center;
+  justify-content: space-evenly;
+  align-items: center;
+  
+  bottom:0%;
+}
+
+.about-item{
+  background-color: rgba(6,3,170,0.3);
+  height:33vw;
+  width:0;
+  flex:1;
+  border: grey 1px solid;
+  border-color: rgba(135,206,222, 1)
+  
+}
+
+.about-item > h1{
+  width: 100%;
+  color:white;
+  font-family: 'Quicksand';
+  display:block;
+  margin-top: 40%;
+  font-size: 20px;
+  /* background-color: rgba(127,205,255,0.5) */
+}
+
+a.about-item > div{
+  width: 100%;
+  color:white;
+  font-family: Roboto;
+  display:block;
+  /* margin-top: 40%; */
+  font-size: 20px;
+  /* background-color: rgba(127,205,255,0.5) */
+}
+
+a{
+  text-decoration: none;
+}
+
+.displayArea{
+  background-color:rgba(0,0,0,0.3);
+  /* height:100%; */
+  width:100%;
+}
+
+.displayArea div{
+  display:none;
+}
+
+
+
+
+
+
+
+/*between phone*/
+@media only screen and (min-width: 460px){
+
+
+
+}
+
+
+
+
+
 
 
 
@@ -417,10 +557,42 @@ button:active{
     img{/*
         display: none;*/
     }
+
+    nav{
+      display: block;
+      background-color: black;
+      padding:1em 1em;
+    }
+    .navLeft{
+      display:inline;
+      font-size:2em;
+      font-family: 'Permanent Marker',monospace;
+
+    }
+    .navRight{
+      display:inline;
+      float: right;
+      font-size:2em;
+      font-family: muli,monospace;
+    }
+    .nav-item{
+     display: inline;
+     text-decoration: none;
+     color:white;
+    }
+
+    .nav-item > a {
+      text-decoration: none;
+      color:white;
+      margin-right:1em;
+    }
+
+
     .mobile-background {
   position: fixed;
   z-index: -1;    
-  background-image: url(../images/abstract.jpeg);
+  /*background-image: url(../images/abstract.jpeg);*/
+  background-image: url(../images/foliobackground2.jpg);
   /*background-image: url(https://images.unsplash.com/14/unsplash_524000a90aaad_1.JPG?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80 );
   */
 
@@ -435,7 +607,21 @@ button:active{
   right: 0;
 }
 
-.header > h1{
+
+/*.desktopOnly{
+  display:none !important;
+  margin: 35% 5% 0%;
+  font-family:'Permanent Marker','Berkshire Swash',muli;
+  font-size: 3.5em;
+  color: #188d9d /*, #468189/*,#064273*//*;
+  text-align: center;
+  padding: 0% 0%;
+  font-weight: normal;
+}
+
+.header > h1 */
+.desktopOnly{
+  display:block!important;
   margin: 200px 5% 0%;
   font-family: 'Permanent Marker','Berkshire Swash',muli;
   font-size: 4em;
@@ -444,6 +630,11 @@ button:active{
   padding: 0% 0%;
   font-weight: normal;
 }
+
+.mobileOnly{
+  display:none!important;
+}
+
 h1 > span{
   color: red;
 }
@@ -486,7 +677,7 @@ ul a:hover {
    display:inline;
 }
 */
-
+/*
 .overlay {
     height: 100%;
     width:0;
@@ -494,20 +685,18 @@ ul a:hover {
     z-index:1;
     top:0;
     left:0;
-    background-color:  rgb(0,0,0);
-    background-color:  rgba(0,0,0,0.93);
     overflow-x:hidden;
     transition: 0.5s;
     padding-top: 60px;
-}
+}*/
 
-.overlay-content{
+/*.overlay-content{
     position: relative;
     top: 30%;
     width:100%;
     text-align: center;
     /*margin-top: 10%;*/
-}
+/*}/*
 .overlay a {
     padding: 2.5%;
     text-decoration: none;
@@ -516,7 +705,7 @@ ul a:hover {
     display: block;
     transition: .7s;
 
-}
+}*/
 
 .openbtn{/*
     position: fixed;
@@ -535,7 +724,7 @@ ul a:hover {
 */
 }
 
-.openbtnDesktop{
+/*.openbtnDesktop{
   position:fixed;
   top:1em;
   left:1em;
@@ -543,30 +732,30 @@ ul a:hover {
   text-decoration: none;
   font-size: 3em;
   color: #818181;
-  display: block;
+                                   display: none;
   animation: myMove 5s infinite;
 }
   @keyframes myMove{
     50%{color:white;}
   }
+*/
 
-
-
+/*
 .overlay a:hover, .overlay a:focus{
     color: #f1f1f1;
-}
-
+}*/
+/*
 .overlay .closebtn {
     position: absolute;
     top: 1%;
     right: 2%;
-    font-size: 5em;/*
-    margin-left: 50px;*/
+    font-size: 5em;
+    margin-left: 50px;
 }
-
+*/
 #main{
   /*margin:0px;*/
-  transition: margin-left .5s;
+  /*transition: margin-left .5s;*/
   padding:0px;
   height:100vh;
 }
@@ -574,28 +763,100 @@ ul a:hover {
 .fa-container{
   display:flex;
   margin-top:5%;
+  justify-content: center;
+  flex-direction: row;
+
+}
+.faDescribe{
+  margin: 0% 5% 15%;
+  font-family: muli;
+  font-size: 1.4em;
+  color:black, #064273;
+  text-align: left;
+  font-weight: bold;
+  width:100%;
+
 }
 
+.fa-item{
+  flex-basis: 10em;
+  margin-left: 0%;
+}
 
 div > .fa{
-    font-size: 5.5em;\
+    font-size: 5.5em;
     font-family: FontAwesome;
     text-align: center;
     text-decoration: none;
-    color:  black/*#F4E9CD/*#7fcdff/*#fed8dc*/;
+    color:  black;
     justify-content: center;
     margin: 2% auto 0px;
-
 }
 
 
 
-/*
-p{
-  color:#468189;
+
+
+
+.about-container{
+  display:flex;
+  flex-direction: row;
+  flex-wrap:nowrap;
+  text-align: center;
+  justify-content: space-evenly;
+  align-items: center;
+  
+  bottom:0%;
 }
-*/
+
+.about-item{
+  background-color: rgba(6,3,170,0.3);
+  height:33vw;
+  width:0;
+  flex:1;
+  border: grey 1px solid;
+  border-color: rgba(135,206,222, 1)
+  
 }
+
+.about-item > h1{
+  width: 100%;
+  color:white;
+  font-family: 'Quicksand';
+  display:block;
+  margin-top: 40%;
+  font-size: 20px;
+  /* background-color: rgba(127,205,255,0.5) */
+}
+
+a.about-item > div{
+  width: 100%;
+  color:white;
+  font-family: Roboto;
+  display:block;
+  /* margin-top: 40%; */
+  font-size: 20px;
+  /* background-color: rgba(127,205,255,0.5) */
+}
+
+a{
+  text-decoration: none;
+}
+
+.displayArea{
+  background-color:rgba(0,0,0,0.3);
+  /* height:100%; */
+  width:100%;
+}
+
+.displayArea div{
+  display:none;
+}
+
+
+}
+
+
 
 /*
 https://images.unsplash.com/photo-1530913629899-1037032b8392?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=658&q=80*/
