--- a/Portfolio/assets/stylesheets/mainfolio.css
+++ b/Portfolio/assets/stylesheets/mainfolio.css
@@ -137,7 +137,7 @@ body{
     padding: 2.5%;
     text-decoration: none;
     font-size: 2.5em;
-    color: black,#818181;
+    color: rgba(136,43,226,.7) !important;
     display: block;
     transition: .7s;
 
@@ -168,7 +168,7 @@ body{
 
 
 .overlay a:hover, .overlay a:focus{
-    color: #f1f1f1;
+    color:#d70d0d !important;
 }
 
 .overlay .closebtn {
@@ -179,28 +179,36 @@ body{
 }
 
 .fa-container{
-  display:flex; 
-  height:100vh;
-  justify-content: center;
+  display:flex;
   flex-direction: column;
   background-color: rgba(34,255,255,.4);
-
+  padding-top:35%;
 
 }
+
 .faDescribe{
   margin: 0%;
-  font-family: muli;
-  font-size: 1.9em;
+  font-family:Quicksand;
+  font-size: 3em;
   color:black/*#064273*/;
-  text-align: left;
+  font-weight: bold;
   width:100%;
-  margin-left:0% !important;
+  display: flex;
+  justify-content: center;
 
+}
+
+.faDescribe2{
+  width:75%;
+  display:flex;
+  align-self: center;
+  text-align: justify;
 }
 
 .fa-item{
-  flex-basis: 9em;
-  margin-left:40%;
+  flex-basis: 18em;
+  display: flex;
+  flex-direction: column;
 }
 
 
@@ -209,14 +217,12 @@ body{
 
 
 div > .fa{
-    font-size: 4.5em;
-    
+    font-size: 5em;
     font-family: FontAwesome;
-    text-align: center;
     text-decoration: none;
-    color:black/*#527771  /*#F4E9CD #7fcdff#fed8dc*/;
-    flex-direction: row;
-    margin: 5% auto 0px;
+    color:#fd780bb5;
+    display:flex;
+    justify-content: center;
 
 }
 
@@ -241,14 +247,13 @@ h1{
 
 .mobileOnly{
   display: block;
-    margin: 0% 5% 0% 0%;
+    margin: 0% 0% 0% 0%;
   font-family:'Permanent Marker','Berkshire Swash',muli;
-  font-size: 2.em;
-  color:black/* #188d9d*/ /*, #468189/*,#064273*/;
-  text-align: center;
-  padding: 7% 0% 0% 10%;
+  font-size: 2em !important;
+  color: white/* #188d9d*/ /*, #468189/*,#064273*/;
+  padding: 0% 0% 0% 0%;
   font-weight: normal;
-  width:0px;
+  width:100vw;
 }
 
 
@@ -275,16 +280,26 @@ h1{
 
 }
 
-.header > p {
-  margin: 0% 0% 0% 2%;
+.header > div > p {
+  margin: 0% 0% 0% 0%;
+  font-family: 'Quicksand';
+  font-size: 1.3em;
+  color:white/*#064273*/;
+  /* font-weight: bold; */
+}
+
+.displayArea p{
+  margin: 0px;
   font-family: 'Quicksand';
   font-size: 1.5em;
-  color:black/*#064273*/;
-  text-align: center;
+  color: white;
   font-weight: bold;
-  position:absolute;
-  top:0%;
 }
+
+
+
+
+
 
 .header{
   display:flex;
@@ -292,7 +307,7 @@ h1{
   background-color: rgba(34,255,255,.4);
   height:100vh;
   justify-content: space-between;
-  width:100%;
+  width:100vw;
 }
 
 
@@ -473,18 +488,15 @@ button:active{
 
 .about-container{
   display:flex;
-  flex-direction: row;
-  flex-wrap:nowrap;
+  /* flex-direction: row; */
+  /* flex-wrap:nowrap; */
   text-align: center;
-  justify-content: space-evenly;
-  align-items: center;
-  
-  bottom:0%;
+  /* align-items: center; */
 }
 
 .about-item{
   background-color: rgba(6,3,170,0.3);
-  height:33vw;
+  height:24vw;
   width:0;
   flex:1;
   border: grey 1px solid;
@@ -496,9 +508,11 @@ button:active{
   width: 100%;
   color:white;
   font-family: 'Quicksand';
-  display:block;
-  margin-top: 40%;
-  font-size: 20px;
+  display:flex;
+  font-size: 1.1em;
+  align-items: center;
+  justify-content: center;
+  /* this worked ^ because the parent is also display flex */
   /* background-color: rgba(127,205,255,0.5) */
 }
 
@@ -506,7 +520,7 @@ a.about-item > div{
   width: 100%;
   color:white;
   font-family: Roboto;
-  display:block;
+  display:flex;
   /* margin-top: 40%; */
   font-size: 20px;
   /* background-color: rgba(127,205,255,0.5) */
@@ -517,8 +531,8 @@ a{
 }
 
 .displayArea{
-  background-color:rgba(0,0,0,0.3);
-  /* height:100%; */
+  /* background-color:rgba(0,0,0,0.3); */
+  height:50%;
   width:100%;
 }
 
@@ -559,15 +573,16 @@ a{
     }
 
     nav{
-      display: block;
-      background-color: black;
+      display: inline-flex;
+      justify-content: space-between;
+      /* background-color: rgba(136, 43, 226, 0.4); */
       padding:1em 1em;
     }
     .navLeft{
-      display:inline;
-      font-size:2em;
       font-family: 'Permanent Marker',monospace;
-
+    }
+    div.navLeft a{
+      font-size:2.2em;
     }
     .navRight{
       display:inline;
@@ -584,9 +599,14 @@ a{
     .nav-item > a {
       text-decoration: none;
       color:white;
-      margin-right:1em;
+      margin-right:.5em;
     }
 
+    div.navLeft p{
+     margin:0px;
+     font-family:Quicksand;
+     font-size:1.5em;
+    }
 
     .mobile-background {
   position: fixed;
@@ -621,19 +641,22 @@ a{
 
 .header > h1 */
 .desktopOnly{
-  display:block!important;
+  display:none;
   margin: 200px 5% 0%;
   font-family: 'Permanent Marker','Berkshire Swash',muli;
   font-size: 4em;
-  color:black/*#f4e9cd/*,#031926,#064273*/;
+  color:blacSk/*#f4e9cd/*,#031926,#064273*/;
   text-align: center;
   padding: 0% 0%;
   font-weight: normal;
 }
 
+
 .mobileOnly{
-  display:none!important;
+  display:none !important;
 }
+
+
 
 h1 > span{
   color: red;
@@ -646,7 +669,21 @@ h1 > span{
   color: black/*#031926/*#064273;*/
   text-align: center;
   font-weight: bold;
+  height:100vh;
+  display:none;
 }
+
+
+  .header > div > p {
+    display:none;
+    font-family: 'Quicksand';
+    font-size: 1.3em;
+    color: white/*#064273*/;
+    /* font-weight: bold; */
+ 
+}
+
+
 
 ul{
    list-style-position:  inside; 
@@ -762,41 +799,46 @@ ul a:hover {
 
 .fa-container{
   display:flex;
-  margin-top:5%;
+  align-items: center;
+  height:100vh;
+  flex-direction:row;
+  flex-wrap:wrap;
   justify-content: center;
-  flex-direction: row;
-
+  padding:0%;
 }
 .faDescribe{
-  margin: 0% 5% 15%;
-  font-family: muli;
-  font-size: 1.4em;
+  font-family: Quicksand;
   color:black, #064273;
-  text-align: left;
   font-weight: bold;
   width:100%;
-
+}
+.faDescribe2{
+  width:60%;
+  color:black;
+  font-size: 2em;
 }
 
 .fa-item{
-  flex-basis: 10em;
-  margin-left: 0%;
+  flex-basis: 20em;
+  min-width:50%;
 }
 
 div > .fa{
-    font-size: 5.5em;
+    font-size: 6.5em;
     font-family: FontAwesome;
     text-align: center;
     text-decoration: none;
-    color:  black;
-    justify-content: center;
-    margin: 2% auto 0px;
+    color:  #fd780bb5;
 }
 
 
 
 
-
+.about-container-container{
+  display:flex;
+  flex-direction: column;
+  flex-wrap:nowrap;
+}
 
 .about-container{
   display:flex;
@@ -811,7 +853,7 @@ div > .fa{
 
 .about-item{
   background-color: rgba(6,3,170,0.3);
-  height:33vw;
+  height:13vh;
   width:0;
   flex:1;
   border: grey 1px solid;
@@ -823,9 +865,10 @@ div > .fa{
   width: 100%;
   color:white;
   font-family: 'Quicksand';
-  display:block;
-  margin-top: 40%;
-  font-size: 20px;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2em;
   /* background-color: rgba(127,205,255,0.5) */
 }
 
@@ -833,7 +876,7 @@ a.about-item > div{
   width: 100%;
   color:white;
   font-family: Roboto;
-  display:block;
+  display:flex;
   /* margin-top: 40%; */
   font-size: 20px;
   /* background-color: rgba(127,205,255,0.5) */
@@ -866,3 +909,18 @@ https://images.unsplash.com/photo-1530913629899-1037032b8392?ixlib=rb-1.2.1&ixid
 
 
 /*   https://images.unsplash.com/photo-1503435824048-a799a3a84bf7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80*/
+
+
+
+
+/* this is genius, to help find issues that pop up with width and horizontal scroll bar that shouldn't be there 
+{
+  background:#000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+}
+*/
+
+html, body{
+  overflow-x:hidden;
+}
