--- a/Portfolio/assets/stylesheets/mainfolio.css
+++ b/Portfolio/assets/stylesheets/mainfolio.css
@@ -1,67 +1,3 @@
-    
-/*
-.mobile-container{
-    
-    background-color: #FFFFFF;
-    height:100vh;
-    color:white;
-    border-radius: 10px;
-}
-
-.mobile-container:before{
-    content: '';
-    display: block;
-    position:absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
-    opacity: 0.35;
-    background-image:url(../images/me_chalkin_code2.jpeg);
-    background-repeat: no-repeat;
-    background-position: 50% 0;
-    background-size: cover;
-
-
-
-.topnav{
-    overflow: hidden;
-    background-color: rgba(35, 220, 189,.4);
-    position: relative;
-    z-index:1;
-}
-
-.topnav #myLinks {
-    display: none;
-}
-
-.topnav a {
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    display: block;
-}
-.topnav a.icon{
-    background: #fed8dc;
-    display: block;
-    position: absolute;
-    right:0;
-    top:0;
-}
-.topnav a:hover {
-    background-color: #fed8dc;
-    color:black;
-
-}
-
-.active{
-    background-color: #91f7e6 /*23DCBD;
-    color:white;
-}
-
-*/ 
 
 
 
@@ -178,6 +114,12 @@ body{
     font-size: 5em;
 }
 
+
+
+
+
+
+
 .fa-container{
   display:flex;
   flex-direction: column;
@@ -203,12 +145,13 @@ body{
   display:flex;
   align-self: center;
   text-align: justify;
+  font-family: quicksand;
 }
 
 .fa-item{
-  flex-basis: 18em;
   display: flex;
   flex-direction: column;
+  margin-bottom:10%;
 }
 
 
@@ -246,14 +189,14 @@ h1{
 }
 
 .mobileOnly{
-  display: block;
-    margin: 0% 0% 0% 0%;
-  font-family:'Permanent Marker','Berkshire Swash',muli;
-  font-size: 2em !important;
-  color: white/* #188d9d*/ /*, #468189/*,#064273*/;
+  display:flex;
+  margin: 0% 0% 0% 0%;
+  font-family:raleway,Quicksand, Helvetica;
+  font-size: 3em;
+  color: hsla(111, 12%, 19%, 0.8)/* #188d9d*/ /*, #468189/*,#064273*//*#fffffff0*/;
   padding: 0% 0% 0% 0%;
-  font-weight: normal;
-  width:100vw;
+  font-weight: bolder;
+  width:90vw;
 }
 
 
@@ -287,17 +230,35 @@ h1{
   color:white/*#064273*/;
   /* font-weight: bold; */
 }
-
+.displayArea{
+  display: flex;
+  font-family: Quicksand;
+  justify-content: center;
+}
 .displayArea p{
   margin: 0px;
   font-family: 'Quicksand';
-  font-size: 1.5em;
+  font-size: 1em;
   color: white;
-  font-weight: bold;
+}
+.displayArea h2, .displayArea h3{
+  text-align: center;
+  margin:10% 0px 0px 0px;
+}
+#self-taught{
+  color:navy;
+}
+ul{
+  text-align: center;
 }
 
-
-
+.image-row{
+  display: flex;
+}
+.image-row-item{
+  height:4em;
+  width:4em;
+}
 
 
 
@@ -314,12 +275,9 @@ h1{
 ul{
    list-style-position:  inside; 
    list-style-type:none;
-   font-family: muli;
-   font-size: 1.2em;
    color:black /*#468189/*#064273*/;
    text-align:center;
    font-weight: none;
-   margin-bottom:35%;
    display:inline;
 }
 
@@ -334,24 +292,21 @@ ul a:hover{
 
 
  div.thumb{
-   width: 50%;
+   width:43%;
+   max-height:160px;
    /*background-color: white; */
    /*box-shadow: 3px 3px 5px 6px #bbb;*/
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); 
-   margin: 25% auto 5%;
+   /*margin: 25% auto 5%;*/
    border-radius: 10px;
+   display: block;
  }
 
  div.info-container{
     text-align: center;
     padding:5%;
-    margin: 0% auto 0%;
-    vertical-align: center;
-    font-family: 'Berkshire Swash';
     border-radius: 10px;
-    font-weight: bold;
-    font-size: 1.2em;
-    color: black;
+    font-size: 1em;
  }
 
  img{
@@ -495,18 +450,20 @@ button:active{
 }
 
 .about-item{
-  background-color: rgba(6,3,170,0.3);
+  /*background-color: rgba(6,3,170,0.3);*/
+  /*background-color: rgba(127,205,255,0.5);*/
+  background-color: #fd780b87;
   height:24vw;
   width:0;
   flex:1;
-  border: grey 1px solid;
-  border-color: rgba(135,206,222, 1)
+  border:#ffffff1f 1px solid;
+  /*border-color: rgba(219, 142, 100, 0.21);*/
   
 }
 
 .about-item > h1{
   width: 100%;
-  color:white;
+  color:white, #3b5c91;
   font-family: 'Quicksand';
   display:flex;
   font-size: 1.1em;
@@ -535,10 +492,26 @@ a{
   height:50%;
   width:100%;
 }
-
+/*
 .displayArea div{
   display:none;
+}*/
+
+.displayAreaItem{
+  display:none;
 }
+
+
+#folio{
+  flex-direction: row;
+  justify-content: space-around;
+  align-items:center;
+  flex-wrap:wrap;"
+}
+
+
+
+
 
 
 
@@ -551,7 +524,14 @@ a{
 
 
 
+
+
+
 }
+
+
+
+
 
 
 
@@ -576,13 +556,20 @@ a{
       display: inline-flex;
       justify-content: space-between;
       /* background-color: rgba(136, 43, 226, 0.4); */
+      /*background-color: rgba(127,205,255,0.5);*/
       padding:1em 1em;
     }
+    .openbtn{
+      display:none;
+    }
+
+
     .navLeft{
-      font-family: 'Permanent Marker',monospace;
     }
     div.navLeft a{
-      font-size:2.2em;
+      font-size:3em;
+      color:rgba(66,47,127,.7);
+      font-family: Quicksand;
     }
     .navRight{
       display:inline;
@@ -598,7 +585,8 @@ a{
 
     .nav-item > a {
       text-decoration: none;
-      color:white;
+      color:rgba(66,47,127,.7);
+      font-family: Quicksand;
       margin-right:.5em;
     }
 
@@ -628,59 +616,16 @@ a{
 }
 
 
-/*.desktopOnly{
-  display:none !important;
-  margin: 35% 5% 0%;
-  font-family:'Permanent Marker','Berkshire Swash',muli;
-  font-size: 3.5em;
-  color: #188d9d /*, #468189/*,#064273*//*;
-  text-align: center;
-  padding: 0% 0%;
-  font-weight: normal;
-}
-
-.header > h1 */
-.desktopOnly{
-  display:none;
-  margin: 200px 5% 0%;
-  font-family: 'Permanent Marker','Berkshire Swash',muli;
-  font-size: 4em;
-  color:blacSk/*#f4e9cd/*,#031926,#064273*/;
-  text-align: center;
-  padding: 0% 0%;
-  font-weight: normal;
-}
-
-
 .mobileOnly{
   display:none !important;
 }
 
 
 
-h1 > span{
-  color: red;
-}
-
-.header > p {
-  margin: 0% 5% 5%;
-  font-family: muli;
-  font-size: 1.4em;
-  color: black/*#031926/*#064273;*/
-  text-align: center;
-  font-weight: bold;
-  height:100vh;
-  display:none;
-}
 
 
   .header > div > p {
     display:none;
-    font-family: 'Quicksand';
-    font-size: 1.3em;
-    color: white/*#064273*/;
-    /* font-weight: bold; */
- 
 }
 
 
@@ -688,8 +633,8 @@ h1 > span{
 ul{
    list-style-position:  inside; 
    list-style-type:none;
-   font-family: muli;
-   font-size: 1.2em;
+   font-family: Quicksand;
+   font-size: 1.5em;
    color:black /*#F4E9CD/*#468189/* #064273*/;
    text-align:center;
    font-weight: none;
@@ -702,94 +647,14 @@ ul a:hover {
   color:red /*#f4e9cd/*#031926 #468189*/;
 }
 
-/*ul{
-   list-style-position:  inside; 
-   list-style-type:none;
-   font-family: muli;
-   font-size: 1.3em;
-   color: #def3f6;
-   text-align:center;
-   font-weight: bold;
-   margin-bottom:35%;
-   display:inline;
-}
-*/
-/*
-.overlay {
-    height: 100%;
-    width:0;
-    position: fixed;
-    z-index:1;
-    top:0;
-    left:0;
-    overflow-x:hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-}*/
-
-/*.overlay-content{
-    position: relative;
-    top: 30%;
-    width:100%;
-    text-align: center;
-    /*margin-top: 10%;*/
-/*}/*
-.overlay a {
-    padding: 2.5%;
-    text-decoration: none;
-    font-size: 2.5em;
-    color: #818181;
-    display: block;
-    transition: .7s;
-
-}*/
-
-.openbtn{/*
-    position: fixed;
-    top:1em;
-    right:1em;
-    padding: 0;
-    text-decoration: none;
-    font-size: 2.5em;
-    color: #818181;*/
-    display: none;/*
-    animation: myMove 5s infinite;
-}
-    @keyframes myMove{
-        50% {color: white;}
-    }
-*/
+div.thumb{
+  max-height: none;
+  min-width:22%;
+  margin:0% 1em 0%;
+  min-height: 36%;
 }
 
-/*.openbtnDesktop{
-  position:fixed;
-  top:1em;
-  left:1em;
-  padding:0;
-  text-decoration: none;
-  font-size: 3em;
-  color: #818181;
-                                   display: none;
-  animation: myMove 5s infinite;
-}
-  @keyframes myMove{
-    50%{color:white;}
-  }
-*/
 
-/*
-.overlay a:hover, .overlay a:focus{
-    color: #f1f1f1;
-}*/
-/*
-.overlay .closebtn {
-    position: absolute;
-    top: 1%;
-    right: 2%;
-    font-size: 5em;
-    margin-left: 50px;
-}
-*/
 #main{
   /*margin:0px;*/
   /*transition: margin-left .5s;*/
@@ -799,12 +664,13 @@ ul a:hover {
 
 .fa-container{
   display:flex;
-  align-items: center;
-  height:100vh;
-  flex-direction:row;
-  flex-wrap:wrap;
-  justify-content: center;
+  /*align-items: center;*/
+  /*height:100vh;*/
+  /*flex-direction:row;*/
+  /*flex-wrap:wrap;*/
+  /*justify-content: center;*/
   padding:0%;
+  padding-top:14%;
 }
 .faDescribe{
   font-family: Quicksand;
@@ -813,13 +679,16 @@ ul a:hover {
   width:100%;
 }
 .faDescribe2{
-  width:60%;
+  width:75%;
   color:black;
   font-size: 2em;
+  font-family:Quicksand;
+  font-weight:normal;
+  text-align: center;
 }
 
 .fa-item{
-  flex-basis: 20em;
+  margin-top: 6%;
   min-width:50%;
 }
 
@@ -852,18 +721,20 @@ div > .fa{
 }
 
 .about-item{
-  background-color: rgba(6,3,170,0.3);
+  /*background-color:rgba(251,75,75,0.3);*/
+   /*rgba(6,3,170,0.3);*/
+  /*background-color: rgba(127,205,255,0.5);*/
   height:13vh;
   width:0;
   flex:1;
-  border: grey 1px solid;
-  border-color: rgba(135,206,222, 1)
-  
+  border: #ffffff1f 1px solid;
+  /*border-color: rgba(219, 142, 100, 0.21);*/
+  background-color: #fd780b87;
 }
 
 .about-item > h1{
   width: 100%;
-  color:white;
+  color:white /*#3b5c91*/;
   font-family: 'Quicksand';
   display:flex;
   align-items: center;
@@ -887,14 +758,42 @@ a{
 }
 
 .displayArea{
-  background-color:rgba(0,0,0,0.3);
-  /* height:100%; */
+  /*background-color:rgba(0,0,0,0.3);*/
   width:100%;
 }
 
-.displayArea div{
+.displayArea h3{
+  font-size: 2em;
+}
+.displayArea p{
+  font-size:1.5em;
+}
+
+/*.displayArea div{
   display:none;
 }
+*/
+
+
+.diplayAreaItem{
+  display:none;
+}
+
+.image-row-item{
+  height:6em;
+  width:6em;
+}
+
+#folio{
+  justify-content: space-evenly;
+  align-items:center;
+  flex-wrap: nowrap;
+}
+
+
+
+
+
 
 
 }
@@ -920,6 +819,11 @@ https://images.unsplash.com/photo-1530913629899-1037032b8392?ixlib=rb-1.2.1&ixid
   outline: solid #f00 1px !important;
 }
 */
+
+
+
+
+
 
 html, body{
   overflow-x:hidden;
